--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AluraBooks</title>
+  <title>Fórmula 1 - Alta Velocidade</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -24,23 +23,23 @@
       <ul class="lista-menu">
         <li class="lista-menu__titulo">Categorias</li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
+          <a href="#" class="lista-menu__link">Pilotos</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
+          <a href="#" class="lista-menu__link">Equipes</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Infraestrutura</a>
+          <a href="#" class="lista-menu__link">Temporadas</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
+          <a href="#" class="lista-menu__link">Circuitos</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Design & UX</a>
+          <a href="#" class="lista-menu__link">História</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-      <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
+      <img src="img/LogoF1.svg" alt="Logo da Fórmula 1" class="container__imagem">
+      <h1 class="container__titulo"><b class="container__titulo--negrito">F1</b> World</h1>
 
       <ul class="opções">
         <input type="checkbox" id="opções-menu" class="opções__botão" />
@@ -50,31 +49,27 @@
 
         <ul class="lista-menu">
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Programação</a>
+            <a href="#" class="lista-menu__link">Pilotos</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Front-end</a>
+            <a href="#" class="lista-menu__link">Equipes</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Infraestrutura</a>
+            <a href="#" class="lista-menu__link">Circuitos</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Business</a>
-          </li>
-          <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Design & UX</a>
+            <a href="#" class="lista-menu__link">História</a>
           </li>
         </ul>
         <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
-        <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+        <li class="opções__item"><a href="#" class="opções__link">Minha garagem</a></li>
       </ul>
 
     </div>
     <div class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"
-          class="container__imagem container__imagem-transparente"></a>
+      <a href="#"><img src="img/Favoritos.svg" alt="Favoritos" class="container__imagem container__imagem-transparente"></a>
       <a href="#" class="container__link">
-        <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
+        <img src="img/Compras.svg" alt="Minhas compras" class="container__imagem">
         <p class="container__texto">Minha sacola</p>
       </a>
       <a href="#" class="container__link">
@@ -85,246 +80,123 @@
   </header>
 
   <section class="banner">
-    <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-    <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-    <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    <h2 class="banner__titulo">Pronto para sentir a emoção das corridas?</h2>
+    <p class="banner__texto">Explore o mundo da Fórmula 1 e acompanhe seus pilotos e equipes favoritos!</p>
+    <input type="search" class="banner__pesquisa" placeholder="Pesquise por pilotos, equipes, circuitos...">
   </section>
 
   <section class="carrossel">
-    <h2 class="carrossel__titulo">Novos lançamentos</h2>
+    <h2 class="carrossel__titulo">Novidades da Temporada</h2>
 
     <div class="carrossel__container">
-      <!-- Slider main container -->
       <div class="swiper">
-
         <div class="swiper-pagination"></div>
-        <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg"
-              alt="Livro sobre liderança em design design da alura books"></div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
-          </div>
-          <div class="swiper-slide">
-            <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
-          </div>
-          <div class="swiper-slide">
-            <img src="img/Portugol.svg" alt="Livro sobre portugol" />
-          </div>
-          <div class="swiper-slide">
-            <img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade" />
-          </div>
+          <div class="swiper-slide"><img src="img/GPMonaco.svg" alt="GP de Mônaco"></div>
+          <div class="swiper-slide"><img src="img/GPItalia.svg" alt="GP da Itália"></div>
+          <div class="swiper-slide"><img src="img/PilotoHamilton.svg" alt="Lewis Hamilton"></div>
+          <div class="swiper-slide"><img src="img/PilotoVerstappen.svg" alt="Max Verstappen"></div>
+          <div class="swiper-slide"><img src="img/GPBrasil.svg" alt="GP do Brasil"></div>
         </div>
-
-        <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
-
       </div>
 
       <div class="card">
         <div class="card__descrição">
           <div class="descrição">
-            <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-            <p class="descrição__texto">
-              Construindo uma aplicação integrada com a plataforma do Google.
-            </p>
+            <h3 class="descrição__titulo">Curta também...</h3>
+            <h2 class="descrição__titulo-livro">História da Fórmula 1</h2>
+            <p class="descrição__texto">Descubra os momentos mais emocionantes da história da F1.</p>
           </div>
-          <img src="img/Angular.svg" class="descrição__imagem" />
+          <img src="img/HistoriaF1.svg" class="descrição__imagem" />
         </div>
         <div class="card__botões">
           <ul class="botões">
-            <li class="botões__item">
-              <img src="img/Favoritos.svg" alt="Favoritar livro" />
-            </li>
-            <li class="botões__item">
-              <img src="img/Compras.svg" alt="Adicionar no carrinho de compras" />
-            </li>
+            <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar"></li>
+            <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar ao carrinho"></li>
           </ul>
           <a href="#" class="botões__ancora">Saiba mais</a>
         </div>
       </div>
     </div>
-
   </section>
 
-  <section class=”carrossel”>
-    <h2 class="carrossel__titulo">Mais vendidos</h2>
+  <section class="carrossel">
+    <h2 class="carrossel__titulo">Corridas mais emocionantes</h2>
 
     <div class="carrossel__container">
       <div class="swiper">
-        <!-- Additional required wrapper -->
-        <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
-
         <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
-          </div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
-          </div>
-          <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
-          <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
-          <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+          <div class="swiper-slide"><img src="img/GPMonaco.svg" alt="GP de Mônaco"></div>
+          <div class="swiper-slide"><img src="img/GPItalia.svg" alt="GP da Itália"></div>
+          <div class="swiper-slide"><img src="img/PilotoHamilton.svg" alt="Lewis Hamilton"></div>
         </div>
-
-        <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
       </div>
 
       <div class="card">
-        <!-- 1º linha -->
         <div class="card__descrição">
-          <!-- 1º coluna -->
-          <div class="descrição">
-            <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-            <h3 class="descrição__titulo">Autora do Mês</h3>
-            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
-              Front-End.
-            </p>
-          </div>
-          <!-- 2º coluna -->
-          <img src="img/Escritora.svg" class="descrição__imagem">
+          <img src="img/Estrelas.svg" alt="Avaliação">
+          <h3 class="descrição__titulo">Piloto do Mês</h3>
+          <h2 class="descrição__titulo-livro">Ayrton Senna</h2>
+          <p class="descrição__texto">Um dos maiores ícones da Fórmula 1, Senna marcou gerações com sua determinação e talento.</p>
         </div>
-
-        <!-- 2º linha -->
         <div class="card__botões">
-          <!-- 1º coluna -->
           <ul class="botões">
-            <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-            <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+            <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar"></li>
+            <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar ao carrinho"></li>
           </ul>
-          <!-- 2º coluna -->
           <a href="#" class="botões__ancora">Saiba mais</a>
         </div>
       </div>
     </div>
-
-
   </section>
 
   <section class="tópicos">
-    <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+    <h2 class="tópicos__titulo">Tópicos recentes</h2>
     <ul class="tópicos__lista">
-      <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Marketing Digital</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Agile</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Startups</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">HTML & CSS</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Python</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">OO</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Java</a>
-      </li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">GP de Mônaco</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">História da Ferrari</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Top Pilotos de 2024</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Circuitos Icônicos</a></li>
     </ul>
   </section>
 
   <section class="contato">
     <div class="contato__descrição">
-      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-      <p class="contato__texto">
-        Atualizações de e-books, novos livros, promoções e outros.
-      </p>
+      <h2 class="contato__titulo">Receba as últimas notícias da F1!</h2>
+      <p class="contato__texto">Novidades sobre corridas, pilotos, e mais diretamente no seu e-mail.</p>
     </div>
-    <input type="email" placeholder="        Cadastre seu e-mail" class="contato__email">
+    <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
   </section>
 
   <hr />
 
   <footer class="rodapé">
-    <h2 class="rodapé__titulo">Grupo Alura</h2>
+    <h2 class="rodapé__titulo">F1 World</h2>
     <ul class="lista-rodapé">
-      <li class="lista-rodapé__titulo">Educação</li>
+      <li class="lista-rodapé__titulo">Sobre a Fórmula 1</li>
       <li class="lista-rodapé__item">
-        <img src="img/Caelum.svg" alt="Logo da Caelum" />
-        <a href="#" class="lista-rodapé__link">Caelum</a>
+        <a href="#" class="lista-rodapé__link">História</a>
       </li>
       <li class="lista-rodapé__item">
-        <img src="img/CasaDoCodigo.svg" alt="Logo da Casa do Código" />
-        <a href="#" class="lista-rodapé__link">Casa do Código</a>
+        <a href="#" class="lista-rodapé__link">Grandes Pilotos</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <a href="#" class="lista-rodapé__link">Equipes Lendárias</a>
       </li>
     </ul>
 
     <ul class="lista-rodapé">
-      <li class="lista-rodapé__titulo">Educação online</li>
+      <li class="lista-rodapé__titulo">Conteúdos</li>
       <li class="lista-rodapé__item">
-        <img src="img/Alura.svg" alt="Logo da Alura" />
-        <a href="#" class="lista-rodapé__link">Alura</a>
+        <a href="#" class="lista-rodapé__link">Últimas Notícias</a>
       </li>
       <li class="lista-rodapé__item">
-        <img src="img/AluraEmpresas.svg" alt="Logo da AluraParaEmpresas" />
-        <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraLATAM.svg" alt="Logo da Alura Latam" />
-        <a href="#" class="lista-rodapé__link">Alura LATAM</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraStart.svg" alt="Logo da Alura START" />
-        <a href="#" class="lista-rodapé__link">Alura Start</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/MusicDot.svg" alt="Logo da Music Dot" />
-        <a href="#" class="lista-rodapé__link">Music Dot</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraLingua.svg" alt="Logo da Alura Lingua" />
-        <a href="#" class="lista-rodapé__link">Alura Língua</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/PM3.svg" alt="Logo da PM3" />
-        <a href="#" class="lista-rodapé__link">PM3</a>
-      </li>
-    </ul>
-
-    <ul class="lista-rodapé">
-      <li class="lista-rodapé__titulo">Comunidade</li>
-      <li class="lista-rodapé__item">
-        <img src="img/HipstersTech.svg" alt="Logo do Hipsters ponto Tech" />
-        <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/ScubaDev.svg" alt="Logo do Scuba Dev" />
-        <a href="#" class="lista-rodapé__link">Scuba Dev</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/LayersTech.svg" alt="Logo do Layers ponto Tech" />
-        <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/LikeABoss.svg" alt="Logo do Like a Boss" />
-        <a href="#" class="lista-rodapé__link">Like a Boss</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem fronteiras" />
-        <a href="#" class="lista-rodapé__link">Carreira sem fronteiras</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/HipstersJobs.svg" alt="Logo do Hipsters ponto jobs" />
-        <a href="#" class="lista-rodapé__link">Hipsters ponto jobs</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/GUJ.svg" alt="Logo do GUJ" />
-        <a href="#" class="lista-rodapé__link">GUJ</a>
+        <a href="#" class="lista-rodapé__link">Corridas ao Vivo</a>
       </li>
     </ul>
   </footer>
