Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 
     </div>
     <div class="container">
-      <a href="#"><img src="URL_DA_IMAGEM_FAVORITOS" alt="Favoritos" class="container__imagem container__imagem-transparente"></a>
+      <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1040/1040230.png" alt="Favoritos" class="container__imagem container__imagem-transparente"></a>
       <a href="#" class="container__link">
-        <img src="URL_DA_IMAGEM_COMPRAS" alt="Minhas compras" class="container__imagem">
+        <img src="https://cdn-icons-png.flaticon.com/512/3594/3594363.png" alt="Minhas compras" class="container__imagem">
         <p class="container__texto">Minha sacola</p>
       </a>
       <a href="#" class="container__link">
-        <img src="URL_DA_IMAGEM_PERFIL" alt="Meu perfil" class="container__imagem">
+        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135768.png" alt="Meu perfil" class="container__imagem">
         <p class="container__texto">Meu perfil</p>
       </a>
     </div>
@@ -92,11 +92,11 @@
       <div class="swiper">
         <div class="swiper-pagination"></div>
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="URL_DA_IMAGEM_GP_MONACO" alt="GP de Mônaco"></div>
-          <div class="swiper-slide"><img src="URL_DA_IMAGEM_GP_ITALIA" alt="GP da Itália"></div>
-          <div class="swiper-slide"><img src="URL_DA_IMAGEM_PILOTO_HAMILTON" alt="Lewis Hamilton"></div>
-          <div class="swiper-slide"><img src="URL_DA_IMAGEM_PILOTO_VERSTAPPEN" alt="Max Verstappen"></div>
-          <div class="swiper-slide"><img src="URL_DA_IMAGEM_GP_BRASIL" alt="GP do Brasil"></div>
+          <div class="swiper-slide"><img src="https://cdn-imgix.headout.com/media/images/7d0797d8d3e5a6961697266f94016da9-Monaco%201.jpg" alt="GP de Mônaco"></div>
+          <div class="swiper-slide"><img src="https://s2-ge.glbimg.com/7y3l9Z0s1IMX5HSfk2ARCxZiVNQ=/0x0:5405x3604/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2022/w/q/u1fNuYSkehInkJEbaopg/gettyimages-1422801029.jpg" alt="GP da Itália"></div>
+          <div class="swiper-slide"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjb9fy7wdDUaDbD4VHbsL8jlq11O5-_xXVIg&usqp=CAU" alt="Lewis Hamilton"></div>
+          <div class="swiper-slide"><img src="https://image.api.playstation.com/vulcan/ap/rnd/202311/2817/47f6fb4538647f6a56bb7fd03b034678c0173965a88156e3.png" alt="Max Verstappen"></div>
+          <div class="swiper-slide"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQH9w7U9fj22479uF_4ls2XdaXkRZqKUe87wX9pQuBSKHRXQO87ZuTV6i_B&s=10" alt="GP do Brasil"></div>
         </div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
@@ -109,12 +109,12 @@
             <h2 class="descrição__titulo-livro">História da Fórmula 1</h2>
             <p class="descrição__texto">Descubra os momentos mais emocionantes da história da F1.</p>
           </div>
-          <img src="URL_DA_IMAGEM_HISTORIA_F1" class="descrição__imagem" alt="História da Fórmula 1" />
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKGNJ6LDniAcb2U_Un4ouQgotpDfySjIqz4rdSTuR53TOzIsPgcoClVtUI&s=10" class="descrição__imagem" alt="História da Fórmula 1" />
         </div>
         <div class="card__botões">
           <ul class="botões">
-            <li class="botões__item"><img src="URL_DA_IMAGEM_FAVORITAR" alt="Favoritar"></li>
-            <li class="botões__item"><img src="URL_DA_IMAGEM_CARRINHO" alt="Adicionar ao carrinho"></li>
+            <li class="botões__item"><img src="https://cdn-icons-png.flaticon.com/512/1040/1040230.png" alt="Favoritar"></li>
+            <li class="botões__item"><img src="https://cdn-icons-png.flaticon.com/512/126/126510.png" alt="Adicionar ao carrinho"></li>
           </ul>
           <a href="#" class="botões__ancora">Saiba mais</a>
         </div>
